# LibWorkspace

./: .gitignore  LibWorkspace.sln  README.md
LibWorkspace/: CMakeLists.txt  LibWorkspace.qrc  LibWorkspace.vcxproj  LibWorkspace.vcxproj.filters
LibWorkspace/DefaultLibraries/: root.json
LibWorkspace/DefaultLibraries/064870ea-f796-4bea-b558-908469faf142/components/: ANGELOV_FET.json  ANGELOV_MODEL.json  CLINP.json  DC_BLCK.json  DC_SWEEP.json  DIODE.json  HB.json  HYBRID_90.json  MCROSQS.json  MCROSS.json  MGAP.json  MLEF.json  MLIN.json  MLINQS.json  MLOC.json  MSIND.json  MSTEPQS.json  MTEEQS.json  MUTIND.json  PRC.json  R.json  SLC.json  SLCQ.json  SPLIT2.json  SRL.json  S_PARAM.json  TERMG.json  TF3.json  TFR.json  TLIN.json  TLINP.json  TLOCP.json  TLSCP.json  TRAN.json  V_DC.json  V_PULSE.json  WIRE.json
LibWorkspace/DefaultLibraries/064870ea-f796-4bea-b558-908469faf142/subnetlists/: 0_20G_lin_fet.scs  angelov_fet.scs
LibWorkspace/DefaultLibraries/b7ad0689-4276-43fa-a6a3-afbcfdeccd4f/: library.json
LibWorkspace/Libraries/: root.json
LibWorkspace/Libraries/064870ea-f796-4bea-b558-908469faf142/: library.json
LibWorkspace/Libraries/b7ad0689-4276-43fa-a6a3-afbcfdeccd4f/: library.json
LibWorkspace/src/: Catalog.h  Component.h  ComponentEditor.cpp  ComponentEditor.h  ComponentsTable.cpp  ComponentsTable.h  DeleteDialog.cpp  DeleteDialog.h  ErrorHandler.cpp  ErrorHandler.h  FillFromJsons.cpp  FillFromJsons.h  FullTableDialog.cpp  FullTableDialog.h  LibWorkspace.cpp  LibWorkspace.h  Library.h  LibraryManager.cpp  LibraryManager.h  MoveDialog.cpp  MoveDialog.h  NewCatalogDialog.cpp  NewCatalogDialog.h  NewComponentDialog.cpp  NewComponentDialog.h  ParameterEditor.cpp  ParameterEditor.h  Parameters.h  ParametersList.cpp  ParametersList.h  SvgViewer.cpp  SvgViewer.h  ThumbSelectDialog.cpp  ThumbSelectDialog.h  UgoTabs.cpp  UgoTabs.h  ValueValidator.cpp  ValueValidator.h  main.cpp  readJson.cpp  (+1 more)
(+160 files in other folders)
